--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "entypo-plus",
+  "version": "1.0.0",
   "description": "Carefully crafted premium pictograms by Daniel Bruce",
   "repository": {
     "type": "git",
